# theme-switcher

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
assets/: resources.gresource.xml
debian/: changelog  control  copyright  libpop-theme-switcher.install  libpop-theme-switcher.shlibs
ffi/: Cargo.toml  build.rs  pop_theme_switcher.h
ffi/src/: lib.rs
src/: gresource.rs  lib.rs  main.rs
