[package]
name = "pop-theme-switcher"
version = "0.1.1"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "GTK theme switcher for Pop!_OS GNOME Settings Appearance panel"
edition = "2018"
license = "LGPLv3"
readme = "README.md"

[workspace]
members = [ "ffi", "tools" ]

[dependencies]
gtk-extras = { git = "https://github.com/pop-os/gtk-extras" }
glib = "0.14"
gtk = "0.14"
gio = "0.14"
