[package]
name = "ffi"
version = "0.1.1"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cdylib-link-lines = "0.1"

[lib]
name = "pop_theme_switcher"
crate-type = [ "cdylib" ]

[dependencies]
glib = "0.14"
gtk-sys = "0.14"
gtk = "0.14"
pop-theme-switcher = { path = "../" }
